Update portfolio and contact section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <!-- ===== CSS Files ===== -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/skins/color-1.css" />
+    <link rel="stylesheet" href="css/contact.css" />
+    <link rel="stylesheet" href="css/portfolio.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -55,7 +57,7 @@
       <!-- ===== Aside Start ===== -->
       <div class="aside">
         <div class="logo">
-          <a href="#"><span>A</span>tlas</a>
+          <a href="#"><span>A</span>rtGrid</a>
         </div>
         <div class="nav-toggler"><span> </span></div>
         <ul class="nav">
@@ -444,6 +446,30 @@
                       alt=""
                       srcset=""
                     />
+                    <div class="card-body">
+                      <h1 class="card-title">NYC</h1>
+                      <p class="card-sub-title">new your city</p>
+                      <p class="card-info">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Ad soluta ipsa enim magnam corporis placeat
+                        nesciunt. Suscipit amet earum, deserunt velit unde
+                        impedit facilis exercitationem.
+                      </p>
+                      <div>
+                        <button class="card-btn btn">
+                          <a href="https://github.com/" target="_blank"
+                            >Source Code</a
+                          >
+                        </button>
+                        <button class="card-btn btn">
+                          <a
+                            href="https://drive.google.com/drive/home"
+                            target="_blank"
+                            >Live Demo</a
+                          >
+                        </button>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -457,6 +483,30 @@
                       alt=""
                       srcset=""
                     />
+                    <div class="card-body">
+                      <h1 class="card-title">NYC</h1>
+                      <p class="card-sub-title">new your city</p>
+                      <p class="card-info">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Ad soluta ipsa enim magnam corporis placeat
+                        nesciunt. Suscipit amet earum, deserunt velit unde
+                        impedit facilis exercitationem.
+                      </p>
+                      <div>
+                        <button class="card-btn btn">
+                          <a href="https://github.com/" target="_blank"
+                            >Source Code</a
+                          >
+                        </button>
+                        <button class="card-btn btn">
+                          <a
+                            href="https://drive.google.com/drive/home"
+                            target="_blank"
+                            >Live Demo</a
+                          >
+                        </button>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -470,6 +520,30 @@
                       alt=""
                       srcset=""
                     />
+                    <div class="card-body">
+                      <h1 class="card-title">NYC</h1>
+                      <p class="card-sub-title">new your city</p>
+                      <p class="card-info">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Ad soluta ipsa enim magnam corporis placeat
+                        nesciunt. Suscipit amet earum, deserunt velit unde
+                        impedit facilis exercitationem.
+                      </p>
+                      <div>
+                        <button class="card-btn btn">
+                          <a href="https://github.com/" target="_blank"
+                            >Source Code</a
+                          >
+                        </button>
+                        <button class="card-btn btn">
+                          <a
+                            href="https://drive.google.com/drive/home"
+                            target="_blank"
+                            >Live Demo</a
+                          >
+                        </button>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -483,6 +557,30 @@
                       alt=""
                       srcset=""
                     />
+                    <div class="card-body">
+                      <h1 class="card-title">NYC</h1>
+                      <p class="card-sub-title">new your city</p>
+                      <p class="card-info">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Ad soluta ipsa enim magnam corporis placeat
+                        nesciunt. Suscipit amet earum, deserunt velit unde
+                        impedit facilis exercitationem.
+                      </p>
+                      <div>
+                        <button class="card-btn btn">
+                          <a href="https://github.com/" target="_blank"
+                            >Source Code</a
+                          >
+                        </button>
+                        <button class="card-btn btn">
+                          <a
+                            href="https://drive.google.com/drive/home"
+                            target="_blank"
+                            >Live Demo</a
+                          >
+                        </button>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -496,6 +594,30 @@
                       alt=""
                       srcset=""
                     />
+                    <div class="card-body">
+                      <h1 class="card-title">NYC</h1>
+                      <p class="card-sub-title">new your city</p>
+                      <p class="card-info">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Ad soluta ipsa enim magnam corporis placeat
+                        nesciunt. Suscipit amet earum, deserunt velit unde
+                        impedit facilis exercitationem.
+                      </p>
+                      <div>
+                        <button class="card-btn btn">
+                          <a href="https://github.com/" target="_blank"
+                            >Source Code</a
+                          >
+                        </button>
+                        <button class="card-btn btn">
+                          <a
+                            href="https://drive.google.com/drive/home"
+                            target="_blank"
+                            >Live Demo</a
+                          >
+                        </button>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -509,6 +631,30 @@
                       alt=""
                       srcset=""
                     />
+                    <div class="card-body">
+                      <h1 class="card-title">NYC</h1>
+                      <p class="card-sub-title">new your city</p>
+                      <p class="card-info">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Ad soluta ipsa enim magnam corporis placeat
+                        nesciunt. Suscipit amet earum, deserunt velit unde
+                        impedit facilis exercitationem.
+                      </p>
+                      <div>
+                        <button class="card-btn btn">
+                          <a href="https://github.com/" target="_blank"
+                            >Source Code</a
+                          >
+                        </button>
+                        <button class="card-btn btn">
+                          <a
+                            href="https://drive.google.com/drive/home"
+                            target="_blank"
+                            >Live Demo</a
+                          >
+                        </button>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -563,24 +709,32 @@
             </h4>
             <!-- ===== Contact Form ===== -->
             <div class="row">
-              <div class="contact-form padd-15">
+              <form class="contact-form padd-15">
                 <div class="row">
                   <div class="form-item col-6 padd-15">
                     <div class="form-group">
                       <input
                         type="text"
-                        class="form-control"
+                        class="form-control item"
+                        id="name"
                         placeholder="Name"
                       />
+                      <div class="error-txt padd-15">
+                        Full Name can't be blank
+                      </div>
                     </div>
                   </div>
                   <div class="form-item col-6 padd-15">
                     <div class="form-group">
                       <input
                         type="email"
-                        class="form-control"
+                        class="form-control item"
+                        id="email"
                         placeholder="Email"
                       />
+                      <div class="error-txt email padd-15">
+                        Email Address can't be blank
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -589,9 +743,13 @@
                     <div class="form-group">
                       <input
                         type="text"
-                        class="form-control"
+                        class="form-control item"
+                        id="subject"
                         placeholder="Subject"
                       />
+                      <div class="error-txt padd-15">
+                        Subject can't be blank
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -600,10 +758,13 @@
                     <div class="form-group">
                       <textarea
                         name=""
-                        class="form-control"
-                        id=""
+                        class="form-control item"
+                        id="message"
                         placeholder="Message"
                       ></textarea>
+                      <div class="error-txt padd-15">
+                        Message can't be blank
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -612,7 +773,7 @@
                     <button type="submit" class="btn">Send Message</button>
                   </div>
                 </div>
-              </div>
+              </form>
             </div>
           </div>
         </section>
@@ -648,5 +809,8 @@
     ></script>
     <script src="js/script.js"></script>
     <script src="js/style-switcher.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="js/contact.js"></script>
   </body>
 </html>
