Update download button html

--- a/index.html
+++ b/index.html
@@ -118,7 +118,13 @@
                   exploring new technologies with the aim of enhancing the
                   effectiveness of development processes.
                 </p>
-                <a href="#" class="btn">Download CV</a>
+                <a
+                  href="https://drive.google.com/file/d/1Vf1eFARhB2n89WSufjSkIA0qN1Opykyd/view?usp=sharing"
+                  class="btn"
+                  target="_blank"
+                  download
+                  >Download CV</a
+                >
               </div>
               <div class="home-img padd-15">
                 <img src="/images/hero.png" alt="" />
