--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
     <link rel="manifest" href="/favicon_io/site.webmanifest" />
     <!-- ===== CSS Files ===== -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/custom.css" />
     <link rel="stylesheet" href="css/skins/color-1.css" />
     <link rel="stylesheet" href="css/contact.css" />
     <link rel="stylesheet" href="css/portfolio.css" />
